# SmartMeterGateway

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  memmap_custom.ld  rp2040_v6_hat_c-patch.cmake
assets/: Embedded-Processing-Graph.dot  references.md
lib/: CMakeLists.txt
lib/aegDma/: CMakeLists.txt  aegDma.c  aegDma.h
lib/aegNetwork/: CMakeLists.txt  aegNetwork.c  aegNetwork.h
lib/aegUart/: CMakeLists.txt  aegUart.c  aegUart.h
lib/smgDma/: smgDma.c  smgDma.h
lib/smgNetwork/: CMakeLists.txt  smgNetwork.c  smgNetwork.h
lib/smgUart/: CMakeLists.txt  smgUart.h
lib/ticConstructor/: CMakeLists.txt  ticConstructor.c  ticConstructor.h
lib/ticParser/: ticParser.c  ticParser.h
libraries/: CMakeLists.txt
pcb/CocotteBoard/: CocotteBoard.kicad_pcb  CocotteBoard.kicad_prl  CocotteBoard.kicad_pro  CocotteBoard.kicad_sch
port/: .cproject  .project  cmake_install.cmake  port_common.h
port/FreeRTOS-Kernel/inc/: FreeRTOSConfig.h
port/io6Library/inc/: w6x00_spi.h
src/: CMakeLists.txt  main.c  memmap_default.ld  memory_map.h
src/blinky/: CMakeLists.txt  blinky.c  memmap_blinky_a.ld  memmap_blinky_b.ld
src/bootloader/: CMakeLists.txt  bootloader.c  memmap_boot.ld
src/firmware/: firmware.c
src/firmware/A/: CMakeLists.txt  memmap_fw_a.ld
src/firmware/B/: CMakeLists.txt  memmap_fw_b.ld
src/lib/: CMakeLists.txt
src/lib/httpServer/: CMakeLists.txt  httpParser.c  httpParser.h  httpServer.c  httpServer.h  userHandler.c
src/lib/sha1/: CMakeLists.txt  sha1.c  test.c
src/lib/smgBoot/: CMakeLists.txt  smgBoot.c  smgBoot.h
src/lib/smgDma/: CMakeLists.txt  smgDma.c  smgDma.h
src/lib/smgIo/: CMakeLists.txt  smgIo.c  smgIo.h
src/lib/smgNetwork/: CMakeLists.txt  smgNetwork.c  smgNetwork.h
src/lib/smgUart/: smgUart.c
src/lib/ticConstructor/: CMakeLists.txt  ticConstructor.c  ticConstructor.h
src/lib/ticParser/: CMakeLists.txt  ticParser.c  ticParser.h
src/tasks/: CMakeLists.txt
src/tasks/alarm/: CMakeLists.txt  alarm.c  alarm.h
src/tasks/logger/: CMakeLists.txt  logger.c  logger.h
src/tasks/webServer/: CMakeLists.txt  webServer.c  webServer.h
src/tasks/webServer/webpages/: firmware_web.h  webpage.h
tools/: GettingStarted.md  Math.txt
tools/HW_Test/AEM_Test/: AEM_Test.kicad_prl  AEM_Test.kicad_pro  AEM_Test.kicad_sch
